Fix header and page gaps

--- a/styles/style.css
+++ b/styles/style.css
@@ -352,14 +352,19 @@ color: #FDDB05;
 
 @media (width < 768px) {
   .page {
-    padding: 10px;
+    padding: 5px;
+    gap: 20px;
   }
 
   .header {
-    grid-template-columns: 100%;
+    grid-template-columns: 1fr 2fr;
     justify-content: center;
     align-items: center;
-    padding: 20px;
+    padding: 20px 10px;
+  }
+
+  .header__menu {
+    grid-column: 1 / 3;
   }
 
   .header__links-list {
@@ -371,11 +376,18 @@ color: #FDDB05;
     justify-self: center;
   }
 
+.address {
+  justify-self: center;
+}
+
+.header .address {
+  justify-self: end;
+}
 
 
 .cover {
   min-height: 60vh;
-  padding: 0;
+  padding: 10px;
 
 }
 
@@ -422,11 +434,11 @@ color: #FDDB05;
 
 .about {
   grid-template-columns: 100%;
+  margin-bottom: 20px;
 }
 
 .about__title {
   margin-top: 0;
-  margin-bottom: 20px;
 }
 
 .footer {
@@ -444,7 +456,6 @@ color: #FDDB05;
 
 .footer__address {
   grid-row: 4/5;
-  justify-self: center;
 }
 
 }
